--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,11 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<style>
+			body {
+			  background-color: #091c2e; /* Replace with your desired color code or name */
+			}
+		  </style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
